# libOpenACC

./: .gitignore  Makefile.am  README.md  build  configure.ac
include/OpenACC/: Makefile.am  openacc.h
include/OpenACC/device/: Makefile.am  host-context.h  openacc.cl  opencl.h
include/OpenACC/internal/: Makefile.am  compiler.h  kernel.h  loop.h  region.h
include/OpenACC/private/: Makefile.am  debug.h  init.h  kernel.h  loop.h  memory.h  region.h  runtime.h
include/OpenACC/public/: Makefile.am  arch.h  async.h  device.h  memory.h  runtime.h
include/OpenACC/utils/: Makefile.am  sqlite.h  tuning.h
include/OpenACC/utils/containers/: Makefile.am  bimap.h
include/OpenACC/utils/sqlite/: Makefile.am  event.h  kernel-data.h  kernel-deps.h  kernel-group.h  kernel-parameter.h  kernel-scalar.h  kernel.h  loop.h  region-data.h  region-parameter.h  region-scalar.h  region.h  sqlite.h  tile.h  version.h
lib/: Makefile  Makefile.am  Makefile.in
lib/internal/: data-env.c  kernel.c  mem-manager.c  opencl-init.c  region.c  runtime.c
lib/opencl/: libopenacc.cl
lib/private/: data-env.c  debug.c  init.c  kernel.c  memory.c  region.c
lib/public/: arch.c  memory.c  runtime.c
lib/utils/: io.c  profiling.c  sqlite.c  tuning.c
lib/utils/containers/: associative.c  bimap.c
lib/utils/sqlite/: event.c  kernel-data.c  kernel-deps.c  kernel-group.c  kernel-parameter.c  kernel-scalar.c  kernel.c  loop.c  region-data.c  region-parameter.c  region-scalar.c  region.c  sqlite.c  tile.c  version.c
src/: Makefile.am  openacc.c
