
openacc_utils_sqlite_includedir=$(prefix)/include/OpenACC/utils/sqlite
openacc_utils_sqlite_include_HEADERS= \
  sqlite.h \
  region.h \
  region-parameter.h \
  region-scalar.h \
  region-data.h \
  kernel.h \
  kernel-deps.h \
  kernel-parameter.h \
  kernel-scalar.h \
  kernel-data.h \
  version.h \
  loop.h \
  tile.h \
  event.h

